--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {font-family: arial; font-size: 13px; margin: 0; padding: 0;}
     width: auto;
 }
 
-#nav a{
+a{
     color: #404040;
     float: right;
     display: block;
@@ -59,3 +59,50 @@ body {font-family: arial; font-size: 13px; margin: 0; padding: 0;}
 .glcky {
     margin: 16px 8px;
 }
+
+.fbar {
+    background: #f2f2f2;
+    border-top: 1px solid #e4e4e4;
+    padding: 0 30px 0 30px;
+    display: block;
+    height: 40px;
+}
+
+.fbarr {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    height: 15px;
+    float: right;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.fbarl {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    height: 15px;
+    float: left;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.fbarl li {
+    float: left;
+    width: auto;
+}
+
+.fbarr li{
+    float: right;
+    width: auto;
+}
+
+.fbarl1{padding-right: 10px;}
+.fbarl2{padding-right: 10px;}
+.fbarl3{padding-right: 10px;}
+
+.fbarr1{padding-left: 10px;}
+.fbarr2{padding-left: 10px;}
