--- a/css/search.css
+++ b/css/search.css
@@ -14,6 +14,36 @@ body {
     padding-bottom: 67px;
 }
 
+#header {
+    /*background-color: #e5e5e5;*/
+    height: 60px;
+}
+.logo_contain {
+    float: left;
+    width: 117px;
+    height: 100%;
+}
+.logo {
+    background: url("../images/logo.png") no-repeat;
+    background-size: 93px 34px;
+    width: 93px;
+    height: 34px;
+    margin: 13px 12px 13px 12px; 
+}
+
+.searchbar {
+    float: left;
+    width: 100px;
+    height: 100%;
+    background-color: blue;
+}
+.tools {
+    float: right;
+    width: 100px;
+    height: 100%;
+    background-color: green;
+}
+
 #footer {
     padding: 18px 0 0 125px;
     position: relative;
@@ -22,7 +52,7 @@ body {
     clear: both;
     background-color: #f2f2f2;
     border-top: 1px solid #e4e4e4;
-    font-size: .85em;
+    font-size: .9em;
 }
 #footer a {
     color: #777777;
@@ -46,6 +76,14 @@ body {
 }
 .location ul li {
     display: inline;
+}
+
+.circle {
+    border-radius: 100%;
+    height: 9px;
+    width: 9px;
+    display: inline-block;
+    background: none repeat scroll 0% 0% #9a9fa4;
 }
 
 .botnav {
