--- a/css/test.css
+++ b/css/test.css
@@ -90,11 +90,15 @@ html, body {
     padding: 4px 8px;
 }
 
-.right {
-    margin: 10px 20px 10px 0;
+.tools {
     float: right;
-    display: block;
-    background-color: green;
-    width: 40px;
-    height: 40px;
+    color: #fff;
+    background: #4d90fe;
+    border: solid 1px #3079ed;
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
+    height: 30px;
+    margin: 15px;
+    line-height: 30px;
+    padding: 0 10px 0 10px;
 }
