--- a/css/search.css
+++ b/css/search.css
@@ -1,45 +1,100 @@
-html {height: 100%;}
-
-body {
-    height: 100%;
+html, body {
     font-family: arial;
-    font-size: 13px;
-    margin: 0 auto;
+    margin: 0;
+    height: 100%;
+    font-size: small;
 }
 
-#wrap {min-height: 100%;}
+.wrap {min-height: 100%;}
 
-#main {
+.main {
     overflow: auto;
-    padding-bottom: 67px;
+	padding-bottom: 60px; /* must be same height as the footer */
 }
 
-.header {
-    background-color: #e5e5e5;
+.toolbar_top {
     height: 60px;
-    white-space: nowrap;
+    background: white;
+    border-bottom: solid 1px #ebebeb;
+}
+.toolbar_top ul {
+    margin: 0 0 0 120px;
+    height: 60px;
+}
+.toolbar_top li {
+    display: inline-block;
+    padding: 0 25px 0 0;
+}
+.toolbar_top a {
+    display: block;
+    height: 60px;
+    line-height: 60px;
+    text-decoration: none;
+    color: #777;
+}
+.toolbar_top a:hover {
+    color: #000;
+}
+.st_button a:hover {
+    border: solid 1px #777;
+}
+.content {
+    margin: 0 120px;
+    background-color: white;
+}
+.results div, p, ul, h1 {
+    margin-bottom: 3px;
+}
+
+.results {
+    width: 520px;
+    margin-bottom: 23px;
+}
+
+.results h1 {
+    font-size: 1.35em;
+}
+.url {
+    font-size: 1.15em;
+    color: green;
+}
+.results li {
+    display: inline;
+}
+
+.footer {
+    position: relative;
+	margin-top: -60px; /* negative value of footer height */
+	height: 60px;
+    background-color: orange;
+	clear:both;
+}
+
+.header_bar {
+    height: 60px;
+    min-width: 680px;
+    background: #e9e9e9;
     overflow: hidden;
 }
-.logo_contain {
-    float: left;
-    padding: 0 25px 0 25px;
-}
+
 .logo {
+    float: left;
     background: url("../images/logo.png") no-repeat;
     background-size: 93px 34px;
     width: 93px;
     height: 34px;
-    margin: 13px 12px 13px 12px; 
+    margin: 13px 12px 13px 12px;
 }
 
-.search_contain {
+.search_container {
+    float: left;
     margin: 15px auto;
 }
 .search_box{
     float: left;
     border: solid 1px #c0c0c0;
     padding: 4px;
-    height: 20px;
+    height: 30px;
     width: 400px;
     border-right: none;
 }
@@ -54,71 +109,15 @@ body {
     height: 30px;
     padding: 4px 8px;
 }
-.tools_contain {
-    width: 100;
+
+.sign_in {
     float: right;
-    background-color: green;
+    color: #fff;
+    background: #4d90fe;
+    border: solid 1px #3079ed;
+    border-radius: 2px;
+    height: 30px;
+    margin: 15px;
+    line-height: 30px;
+    padding: 0 10px 0 10px;
 }
-.h_layout {
-    display: inline-block;
-}
-
-#footer {
-    padding: 18px 0 0 125px;
-    position: relative;
-    margin-top: -86px; /*inverse of footer height + padding + border*/
-    height: 67px;
-    clear: both;
-    background-color: #f2f2f2;
-    border-top: 1px solid #e4e4e4;
-    font-size: .9em;
-}
-#footer a {
-    color: #777777;
-    text-decoration: none;
-}
-#footer a:hover {
-    color: black;
-}
-
-.location {
-    height: 25px;
-}
-.location ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    position: relative;
-    float: left;
-    top: 50%;
-    transform: translateY(-50%);
-}
-.location ul li {
-    display: inline;
-}
-
-.circle {
-    border-radius: 100%;
-    height: 9px;
-    width: 9px;
-    display: inline-block;
-    background: none repeat scroll 0% 0% #9a9fa4;
-}
-
-.botnav {
-    height: 40px;
-}
-.botnav ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    position: relative;
-    float: left;
-    top: 50%;
-    transform: translateY(-50%);
-}
-.botnav ul li {
-    display: inline;
-    padding-right: 20px;
-}
-
