--- a/css/search.css
+++ b/css/search.css
@@ -16,8 +16,11 @@ html, body {
     height: 60px;
     background: white;
     border-bottom: solid 1px #ebebeb;
+    overflow: hidden;
+    min-width: 600px;
 }
 .toolbar_top ul {
+    float: left;
     margin: 0 0 0 120px;
     height: 60px;
 }
@@ -35,11 +38,26 @@ html, body {
 .toolbar_top a:hover {
     color: #000;
 }
+.tools_button {
+    float: right;
+    border: solid 1px #c6c6c6;
+    border-radius: 2px;
+    height: 30px;
+    width: 68px;
+    margin: 15px;
+    line-height: 30px;
+}
+.search_info {
+    height: 12px;
+    margin: -15px 0 20px 0;
+    color: #666;
+    overflow: hidden;
+}
 .st_button a:hover {
     border: solid 1px #777;
 }
 .content {
-    margin: 0 120px;
+    margin: 30px 120px;
     background-color: white;
 }
 .results div, p, ul, h1 {
@@ -61,15 +79,9 @@ html, body {
 .results li {
     display: inline;
 }
-
-.footer {
-    position: relative;
-	margin-top: -60px; /* negative value of footer height */
-	height: 60px;
-    background-color: orange;
-	clear:both;
+.results a {
+    text-decoration: none;
 }
-
 .header_bar {
     height: 60px;
     min-width: 680px;
@@ -120,4 +132,59 @@ html, body {
     margin: 15px;
     line-height: 30px;
     padding: 0 10px 0 10px;
+}
+.footer {
+    /*sticky footer*/
+    position: relative;
+    margin-top: -60px; /* negative value of footer height */
+    height: 60px;
+    clear:both;
+    /*sticky footer*/
+    padding-top: 20px;
+    background: #e9e9e9;
+    border-top: solid 1px #e4e4e4;
+    overflow: hidden;
+    min-width: 800px;
+}
+.location_bar {
+    color: #aaa;
+    margin-left: 120px;
+    height: 11px;
+    overflow: hidden;
+}
+.location_bar li {
+    display: inline-block;
+    margin-right: 5px;
+}
+.location_bar a {
+    text-decoration: none;
+    color: #777;
+}
+.location_bar a:hover {
+    color: #000;
+}
+.circle {
+    display: inline-block;
+    width: 9px;
+    height: 9px;
+    border: solid 1px #aaa;
+    border-radius: 5px;
+    background: #aaa;
+}
+.about_bar {
+    color: #aaa;
+    height: 40px;
+    line-height: 40px;
+    margin-left: 120px;
+}
+.about_bar li {
+    display: inline-block;
+    margin-right: 25px;
+}
+.about_bar a {
+    text-decoration: none;
+    color: #777;
+}
+.about_bar a:hover {
+    color: #000;
 }
