--- a/css/search.css
+++ b/css/search.css
@@ -57,8 +57,10 @@ html, body {
     border: solid 1px #777;
 }
 .content {
-    margin: 30px 120px;
+    margin: 30px 0 0 120px;
     background-color: white;
+    border-bottom: solid 1px #c6c6c6;
+    width: 520px;
 }
 .results div, p, ul, h1 {
     margin-bottom: 3px;
@@ -68,9 +70,30 @@ html, body {
     width: 520px;
     margin-bottom: 23px;
 }
-
 .results h1 {
     font-size: 1.35em;
+}
+.related_searches {
+    width: 520px;
+    margin-left: 120px;
+    border-bottom: solid 1px #c6c6c6;
+    margin: 0 0 23px 120px;
+    overflow: hidden;
+}
+.related_searches h1 {
+    font-size: 1.5em;
+    color: #777;
+    margin: 15px 0 10px 0;
+}
+.related_searches ul {
+    display: inline-block;
+}
+.related_searches li {
+    padding: 0 60px 15px 0;
+}
+.related_searches a {
+    font-weight: bold;
+    text-decoration: none;
 }
 .url {
     font-size: 1.15em;
@@ -88,7 +111,6 @@ html, body {
     background: #e9e9e9;
     overflow: hidden;
 }
-
 .logo {
     float: left;
     background: url("../images/logo.png") no-repeat;
